// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SidePanel /> Should render and match the snapshot when closed 1`] = `
.c1 {
  width: 300px;
  height: 100%;
  background-color: #FFFFFF;
  overflow-y: auto;
}

.c0 {
  position: fixed;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  z-index: 1;
  height: calc(100vh - 70px);
  top: 70px;
  right: -300px;
  -webkit-transition: right 0.4s ease;
  transition: right 0.4s ease;
}

<div>
  <div
    class="c0"
    width="300"
  >
    <div
      class="c1"
      width="300"
    />
  </div>
</div>
`;

exports[`<SidePanel /> Should render and match the snapshot when open 1`] = `
.c1 {
  width: 300px;
  height: 100%;
  background-color: #FFFFFF;
  box-shadow: 0px 0px 50px rgba(0,0,0,0.08);
  overflow-y: auto;
}

.c0 {
  position: fixed;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  z-index: 1;
  height: calc(100vh - 70px);
  top: 70px;
  right: 0;
  -webkit-transition: right 0.4s ease;
  transition: right 0.4s ease;
}

<div>
  <div
    class="c0"
    width="300"
  >
    <div
      class="c1"
      width="300"
    />
  </div>
</div>
`;
